[project]
name = "dayz-dev-tools"
version = "1.8.0"
authors = [
    {name = "Tim Jensen", email = "tim.l.jensen@gmail.com"}
]
description = "Useful tools for DayZ mod developers."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.8.2",
    "tomli>=2.0.0; python_version<'3.11'"
]
keywords = ["dayz", "tools", "pbo", "server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://dayz-dev-tools.readthedocs.io/"
Repository = "https://github.com/tjensen/dayz-dev-tools"
Issues = "https://github.com/tjensen/dayz-dev-tools/issues"
Changelog = "https://github.com/tjensen/dayz-dev-tools/releases"

[tool.setuptools.packages.find]
include = ["dayz_dev_tools"]

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]

[tool.mypy]
files = "dayz_dev_tools,tests"
plugins = "pydantic.mypy"
strict = true
show_error_codes = true

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "pytest==8.3.4"
]
publish = ["twine==5.1.1"]
docs = [
    "readthedocs-sphinx-search>=0.3.2",
    "Sphinx>=4.1.2",
    "sphinx-rtd-theme"
]

[project.scripts]
guid = "dayz_dev_tools.guid:main"
pbo = "dayz_dev_tools.pbo:main"
run-server = "dayz_dev_tools.run_server:main"
unpbo = "dayz_dev_tools.unpbo:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
