[package]
name = "dayz-dev-tools-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
memchr = { version = "2.7.4", features = ["std"] }
pyo3.workspace = true

[lib]
name = "dayz_dev_tools_rust"
crate-type = ["cdylib"]
